Add service worker

--- a/index.html
+++ b/index.html
@@ -23,4 +23,15 @@
   <body>
     <h1>Hello World - You can add me to the Homescreen.</h1>
   </body>
+
+  <script>
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", function () {
+        navigator.serviceWorker
+          .register("/serviceWorker.js")
+          .then((res) => console.log("service worker registered"))
+          .catch((err) => console.log("service worker not registered", err));
+      });
+    }
+  </script>
 </html>
