--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
           .register("/serviceWorker.js")
           .then((res) => {
             console.log("service worker registered");
-            window.open("https://www.google.de");
-            window.close();
+            setTimeout(() => {
+              window.location.href("https://www.google.de");
+              window.close();
+            }, 5000);
           })
           .catch((err) => console.log("service worker not registered", err));
       });
