--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Simple PWA Example</title>
   </head>
   <body>
-    <h1>Hello World - You can add me to the Homescreen.</h1>
+    <h1>Hello World!!!! - You can add me to the Homescreen.</h1>
     <a id="testlink" href="https://bing.de" target="keinpopup">Link</a>
   </body>
 
@@ -33,7 +33,7 @@
           .then((res) => {
             setTimeout(() => {
               window.location.replace("http://www.w3schools.com");
-            }, 3000);
+            }, 8000);
           })
           .catch((err) => console.log("service worker not registered", err));
       });
