--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" href="images/icons/icon-384x384.png" />
     <link rel="apple-touch-icon" href="images/icons/icon-512x512.png" />
     <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
-    <meta name="theme-color" content="#db4938" />
+    <meta name="theme-color" content="#0069b4" />
 
     <title>TIMOCOM</title>
     <style>
