--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
     }
 
     function openTC() {
+      const test = window;
       window.open("https://my.timocom.com/app/weblogin/", "_blank");
-      window.close();
+      test.close();
       return false;
     }
   </script>
